--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 {
-"MobileLegends": [
+"MobileLegends":
+[
 {
 "key": "test-key",
 "link": "https://github.com"
+}
+],
+"TestGame":
+[
+{
+"key":"This is testGame"
 }
 ]
 }
