--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
 "key": "test-key",
 "link": "https://github.com"
 }
-],
-{
-"SpecimenZero":
-[
-{
-"key":"testgame"
-}
 ]
-}
+"TestGame":
+[
+"key":"hfjejsjdj"
+]
 }
 
 
