--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "FREE",
-"link": "https://youtu.be/jpblpnei6hI:",
+"key": "R3dhcG9Ba28=",
+"link": "https://rshrt.com/M4PH4X_Key:",
 "version": 2.0
 }
 ],
