--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 [
 {
 "key": "R3dhcG9Ba28=",
-"link": "https://rshrt.com/M4PH4X_Key:",
+"link": "https://rshrt.com/M4PH4X_Key",
 "version": 2.0
 }
 ],
