--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 {
 "key": "R3dhcG9Ba28=",
 "link": "https://rshrt.com/M4PH4X_Key",
-"version": 2.0
+"version": 2.0,
+"test": "test1"
 }
 ],
 "TestGame":
