--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "key": "R3dhcG9Ba28=",
 "link": "https://rshrt.com/M4PH4X_Key",
 "version": 2.0,
-"test": "test1"
+"test": "test1jdjdjd"
 }
 ],
 "TestGame":
