--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "R3dhcG9Ba28=",
-"link": "https://rshrt.com/M4PH4X_Key",
+"key": "aGRuZGplamRkaWU=",
+"link": "https://rshrt.com/qB1pff",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
