--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 [
 {
 "key": "aGRuZGplamRkaWU=",
-"link": "https://rshrt.com/qB1pff",
+"link": "https://rshrt.com/a66u",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
