--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "aGRuZGplamRkaWU=",
-"link": "https://rshrt.com/a66u",
+"key": "JANFKIWJ13JPA==",
+"link": "https://rshrt.com/vyBdQhA",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
