--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "JANFKIWJ13JPA==",
-"link": "https://rshrt.com/vyBdQhA",
+"key": "LFIUERCPIFIFCQSSJZGUC===",
+"link": "https://rshrt.com/546jYFzJ",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
