--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "LFIUERCPIFIFCQSSJZGUC===",
-"link": "https://rshrt.com/546jYFzJ",
+"key": "KFHVIQSBJBKEWQI=",
+"link": "https://rshrt.com/BZdL2rwq",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
