--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KFHVIQSBJBKEWQI=",
-"link": "https://rshrt.com/BZdL2rwq",
+"key": "KFEUMQSYJNLUQQY=",
+"link": "https://rshrt.com/06tIFSb",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
