--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KFEUMQSYJNLUQQY=",
-"link": "https://rshrt.com/06tIFSb",
+"key": "LFLUEVCQIFBFE===",
+"link": "https://rshrt.com/jLALVW7",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
