--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KRIUER2QIFEEO===",
-"link": "https://rshrt.com/dBKhBrM",
+"key": "LBBECQSHKBJVO===",
+"link": "https://rshrt.com/RwQ1FsYd",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
