--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "LBBECQSHKBJVO===",
-"link": "https://rshrt.com/RwQ1FsYd",
+"key": "KFEVEQSDKBIU4===",
+"link": "https://rshrt.com/KZSO",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
