--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KFEVEQSDKBIU4===",
-"link": "https://rshrt.com/KZSO",
+"key": "J5IUERCKKNFA====",
+"link": "https://rshrt.com/K3yfA",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
