--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "J5IUERCKKNFA====",
-"link": "https://rshrt.com/K3yfA",
+"key": "KVIVMUSQK5BFK===",
+"link": "https://rshrt.com/OOlXzww",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
