--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KVIVMUSQK5BFK===",
-"link": "https://rshrt.com/OOlXzww",
+"key": "KFEVEVSGKBLQ====",
+"link": "https://rshrt.com/AgSes1b",
 "version": 2.0,
 "test": "test1jdjdjd"
 }
