--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KFEVEVSGKBLQ====",
-"link": "https://rshrt.com/AgSes1b",
+"key": "KBMU4V2CLBFEC===",
+"link": "https://rshrt.com/ZmQJ",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
