--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KBMU4V2CLBFEC===",
-"link": "https://rshrt.com/ZmQJ",
+"key": "JFCUORCCLBBFGSSXKFMQ====",
+"link": "https://rshrt.com/5GYIRuJ",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
