--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "JFCUORCCLBBFGSSXKFMQ====",
-"link": "https://rshrt.com/5GYIRuJ",
+"key": "IFFFOVKSJBBUSV2KIZDEW===",
+"link": "https://rshrt.com/rT0V",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
