--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "IFFFOVKSJBBUSV2KIZDEW===",
-"link": "https://rshrt.com/rT0V",
+"key": "KBIUQRKCIZFFGSKXJFLUURA=",
+"link": "https://rshrt.com/K4GOjokd",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
