--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KBIUQRKCIZFFGSKXJFLUURA=",
-"link": "https://rshrt.com/K4GOjokd",
+"key": "JFIUQU2CIRFFOSCXIJJUEUY=",
+"link": "https://rshrt.com/Ke7",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
