--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "JFIUQU2CIRFFOSCXIJJUEUY=",
-"link": "https://rshrt.com/Ke7",
+"key": "KBLUURCCLBBFOSKBIFFEC===",
+"link": "https://rshrt.com/aCwaXnqv",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
