--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "KBLUURCCLBBFOSKBIFFEC===",
-"link": "https://rshrt.com/aCwaXnqv",
+"key": "SkJEQkFCREJTQlNKU1NNUw==",
+"link": "https://rshrt.com/i0g0",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
