--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "SkJEQkFCREJTQlNKU1NNUw==",
-"link": "https://rshrt.com/i0g0",
+"key": "cWlmYmRwcWJkYmRqYQ==",
+"link": "https://rshrt.com/bKM",
 "version": 3.0,
 "test": "test1jdjdjd"
 }
