--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "cWlmYmRwcWJkYmRqYQ==",
-"link": "https://rshrt.com/bKM",
+"key": "anNiZGJjaGFqZmpobnc=",
+"link": "https://rshrt.com/4kVzSP",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
