--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "anNiZGJjaGFqZmpobnc=",
-"link": "https://rshrt.com/4kVzSP",
+"key": "aHNqZGlxandic2lzandqcWlzbg==",
+"link": "https://rshrt.com/Lfz",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
