--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "aHNqZGlxandic2lzandqcWlzbg==",
-"link": "https://rshrt.com/Lfz",
+"key": "aGp3b2NqdnVkd2ljZHFvdw==",
+"link": "https://rshrt.com/6G0",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
