--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "aGp3b2NqdnVkd2ljZHFvdw==",
-"link": "https://rshrt.com/6G0",
+"key": "ncGVoYWJkbmRqd2l3ampzcW4=",
+"link": "https://rshrt.com/swweK",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
