--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "ncGVoYWJkbmRqd2l3ampzcW4=",
-"link": "https://rshrt.com/swweK",
+"key": "aXdoeGp4aHFueA==",
+"link": "https://rshrt.com/VSQqHGC",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
