--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "aXdoeGp4aHFueA==",
-"link": "https://rshrt.com/VSQqHGC",
+"key": "aWR1c2JxbmRuZXBnb3E=",
+"link": "https://rshrt.com/2YIkAak",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
