--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "aWR1c2JxbmRuZXBnb3E=",
-"link": "https://rshrt.com/2YIkAak",
+"key": "eWVicW5ja3NrYW5zbmZuYXc=",
+"link": "https://rshrt.com/EGN",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
