--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "eWVicW5ja3NrYW5zbmZuYXc=",
-"link": "https://rshrt.com/EGN",
+"key": "cHdqZm5jYmFocWJmYmdqYQ==",
+"link": "https://rshrt.com/69M5aEJE",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
