--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "cHdqZm5jYmFocWJmYmdqYQ==",
-"link": "https://rshrt.com/69M5aEJE",
+"key": "cHFuY253anRicWt2bnFjZyBicXAgang=",
+"link": "https://rshrt.com/TAnuh8",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
