--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "cHFuY253anRicWt2bnFjZyBicXAgang=",
-"link": "https://rshrt.com/TAnuh8",
+"key": "cHdocWJjaXNocW5naXNqZmp3amp3",
+"link": "https://rshrt.com/8W0",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
