--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "cHdocWJjaXNocW5naXNqZmp3amp3",
-"link": "https://rshrt.com/8W0",
+"key": "cHFqZmJjamFxYnduZ2l2b3dodw==",
+"link": "https://rshrt.com/oO0Sji",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
