--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "cHFqZmJjamFxYnduZ2l2b3dodw==",
-"link": "https://rshrt.com/oO0Sji",
+"key": "cXBybmNhbnRqd2J3aGNpY2pxdw==",
+"link": "https://rshrt.com/uAx",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
