--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "MobileLegends":
 [
 {
-"key": "cXBybmNhbnRqd2J3aGNpY2pxdw==",
-"link": "https://rshrt.com/uAx",
+"key": "cHJqd2pkaHduZmp3bndiZHVjd2pudg==",
+"link": "https://rshrt.com/CZtKU",
 "version": 3.1,
 "test": "test1jdjdjd"
 }
